# SimClaw

./: README.md  config.yaml  pyproject.toml
simclaw/: __init__.py  __main__.py  agent.py  config.py  llm.py  main.py  safety.py
simclaw/context/: __init__.py  engine.py
simclaw/memory/: __init__.py  conversation.py  persistent.py  search.py
simclaw/rag/: __init__.py  indexer.py  retriever.py
simclaw/skills/: __init__.py  loader.py
simclaw/tools/: __init__.py  base.py  browser.py  doc_search.py  file_read.py  file_write.py  log_read.py  memory_tool.py  shell_execute.py  star_execute.py  star_macro_write.py  web_search.py
simclaw/workspace/: __init__.py  manager.py
simclaw/workspace/defaults/: HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md
skills/star-ccm/: SKILL.md
tests/: test_agent.py  test_config.py  test_llm.py  test_memory_workspace.py  test_safety.py  test_tools.py
workspace/: AGENTS.md  MEMORY.md  TOOLS.md  USER.md
workspace/memory/: 2026-03-22.md
